Update 5.26 Simple Return, Log Return, What is LOG?.md

--- a/Today I learned/5.26 Simple Return, Log Return, What is LOG?.md
+++ b/Today I learned/5.26 Simple Return, Log Return, What is LOG?.md
@@ -36,3 +36,18 @@ import math
 howmanyyears = math.log(5, 1.1) 
 print(howmanyyears)       #16.886317030755073
 ```
+
+The Difference between Simple Return and Log Return
+Log Returns are additive over time.
+Simple Returns are not addictive over time.
+
+For example,
+If we have initial capital of $5000,
+
+If Simple Daily return is 1%, and in an year, the capital will be 5000 * 1.01<sup>252</sup> = $61370 (252 is # of trading days in an year) 
+
+Annual return will be (61370 - 5000) / 5000 * 100 =  1,127% (11 times original capital)
+
+If Log Daily return is 1%, and in an year, the capital will be 5000 + (0.01 * 252 * 5000) = 5000 + 12600 = $17600
+
+Annual return will be 0.01 * 252 * 100 = 252% (2.52 times original capital)
