--- a/Today I learned/5.26 Simple Return, Log Return, What is LOG?, Variance, Standard Deviation.md
+++ b/Today I learned/5.26 Simple Return, Log Return, What is LOG?, Variance, Standard Deviation.md
@@ -10,6 +10,13 @@ Logarithmic Return
 -logarithmic return - for calculating one single asset
 
 -log return = log(ending price) - log(starting price) = log(ending price / starting price)
+
+2.
+Variance
+
+
+3.
+Standard Deviation
 ```
 
 
@@ -51,3 +58,54 @@ Annual return will be (61370 - 5000) / 5000 * 100 =  1,127% (11 times original c
 If Log Daily return is 1%, and in an year, the capital will be 5000 + (0.01 * 252 * 5000) = 5000 + 12600 = $17600
 
 Annual return will be 0.01 * 252 * 100 = 252% (2.52 times original capital)
+
+
+Variance
+```
+#individual returns of strategy1
+strategy1 = [3,2,4,-1,-2,-17,25]
+
+def calculate_variance(strategy):
+  mean = sum(strategy)/len(strategy)
+  result = 0
+  for a in strategy:
+    b = (a - mean) ** 2
+    result += b
+  return result/len(strategy) 
+
+
+
+c=calculate_variance(strategy1)
+print(c)            #131.42857142857142
+```
+
+---
+Standard Deviation
+```
+import numpy as np
+from math import sqrt   #we want to use the function sqrt()
+
+strategy1 = [3,2,4,-1,-2,-17,25]
+
+
+#function to calculate variance
+def calculate_variance(strategy):
+  mean = sum(strategy)/len(strategy)
+  result = 0
+  for a in strategy:
+    b = (a - mean) ** 2
+    result += b
+  return result/len(strategy)
+
+#function to calculate standard deviation
+def calculate_stddev(strategy):
+  return sqrt(calculate_variance(strategy))
+
+
+print(calculate_stddev(strategy1))      #11.464230084422216
+
+#test to see if we made our function correctly
+test1 = np.std(strategy1)
+print(test1)          #11.464230084422216
+
+```
