Update and rename 5.26 Simple Return, Log Return, What is LOG?, Variance, Standard Deviation.md to 5.26 Simple Return, Log Return, What is LOG?, Variance, Standard Deviation, How to access source of a function? .md

--- a/Today I learned/5.26 Simple Return, Log Return, What is LOG?, Variance, Standard Deviation, How to access source of a function? .md
+++ b/Today I learned/5.26 Simple Return, Log Return, What is LOG?, Variance, Standard Deviation, How to access source of a function? .md
@@ -1,5 +1,5 @@
-```
 5/26 Today I learned...
+
 1.
 Simple Return
 -simple return - calculating multiple assets
@@ -17,6 +17,17 @@ Variance
 
 3.
 Standard Deviation
+
+
+4.
+Correlation Coefficient
+
+
+5.
+How to access to sourcecode
+```
+import inspect
+print(inspect.getsource(function_name))
 ```
 
 
@@ -107,5 +118,13 @@ print(calculate_stddev(strategy1))      #11.464230084422216
 #test to see if we made our function correctly
 test1 = np.std(strategy1)
 print(test1)          #11.464230084422216
+
+```
+---
+Correlation Coefficient
+
+What is a correlation coefficient?
+- 
+```
 
 ```
