--- a/Today I learned/5.26 Simple Return, Log Return, What is LOG?, Variance, Standard Deviation, How to access source of a function? .md
+++ b/Today I learned/5.26 Simple Return, Log Return, What is LOG?, Variance, Standard Deviation, How to access source of a function? .md
@@ -1,30 +1,24 @@
 5/26 Today I learned...
 
-1.
-Simple Return
--simple return - calculating multiple assets
+1. Simple Return & Log Return
 
--simple return = (ending price - starting price)/starting price
+Simple Return - calculating multiple assets
+- simple return = (ending price - starting price)/starting price
 
-Logarithmic Return
--logarithmic return - for calculating one single asset
+Logarithmic Return - calculating one single asset
+- log return = log(ending price) - log(starting price) = log(ending price / starting price)
 
--log return = log(ending price) - log(starting price) = log(ending price / starting price)
+2. Variance - measure risks
 
-2.
-Variance
+3. Standard Deviation
 
 
-3.
-Standard Deviation
+
+4. Correlation Coefficient
 
 
-4.
-Correlation Coefficient
+5. How to access to sourcecode
 
-
-5.
-How to access to sourcecode
 ```
 import inspect
 print(inspect.getsource(function_name))
