Update 5.26 Simple Return, Log Return, What is LOG?, Variance, Standard Deviation, How to access source of a function? .md

--- a/Today I learned/5.26 Simple Return, Log Return, What is LOG?, Variance, Standard Deviation, How to access source of a function? .md
+++ b/Today I learned/5.26 Simple Return, Log Return, What is LOG?, Variance, Standard Deviation, How to access source of a function? .md
@@ -86,6 +86,11 @@ print(c)            #131.42857142857142
 
 ---
 Standard Deviation
+- In a normal distribution curve, the meaning of standard deviation is really important.
+- Standard deviation is about how disperse each data are from their average data.
+- What is more rare? between having IQ of 115, and having age of 115.
+- Probably age of 115, it is because the standard deviation of age is smaller than IQ's.
+- It also has meaningful probability , one standard deviation is 68%
 ```
 import numpy as np
 from math import sqrt   #we want to use the function sqrt()
