Update 5.26 Simple Return, Log Return, What is LOG?, Variance, Standard Deviation, How to access source of a function? .md

--- a/Today I learned/5.26 Simple Return, Log Return, What is LOG?, Variance, Standard Deviation, How to access source of a function? .md
+++ b/Today I learned/5.26 Simple Return, Log Return, What is LOG?, Variance, Standard Deviation, How to access source of a function? .md
@@ -90,7 +90,8 @@ Standard Deviation
 - Standard deviation is about how disperse each data are from their average data.
 - What is more rare? between having IQ of 115, and having age of 115.
 - Probably age of 115, it is because the standard deviation of age is smaller than IQ's.
-- It also has meaningful probability , one standard deviation is 68%
+- Standard deviation also has meaningful probability. Probability of one data being inside one standard deviation is 68.2%, two standard deviation is 95.44%, 3 is 99.74%
+- Standard deviation of human IQ is 15 and average is 100, which means that the probability of someone's IQ is higher than 145 is 0.13%((100-99.74)/2) which is about 1~2 people out of 1000 people.
 ```
 import numpy as np
 from math import sqrt   #we want to use the function sqrt()
