Update 5.26 Simple Return, Log Return, What is LOG?, Variance, Standard Deviation, How to access source of a function? .md

--- a/Today I learned/5.26 Simple Return, Log Return, What is LOG?, Variance, Standard Deviation, How to access source of a function? .md
+++ b/Today I learned/5.26 Simple Return, Log Return, What is LOG?, Variance, Standard Deviation, How to access source of a function? .md
@@ -1,6 +1,6 @@
 5/26 Today I learned...
 
-1. Simple Return & Log Return
+# 1. Simple Return & Log Return
 
 Simple Return - calculating multiple assets
 - simple return = (ending price - starting price)/starting price
@@ -8,23 +8,23 @@ Simple Return - calculating multiple assets
 Logarithmic Return - calculating one single asset
 - log return = log(ending price) - log(starting price) = log(ending price / starting price)
 
-2. Variance - measure risks
+# 2. Variance - measure risks
 
-3. Standard Deviation
-
-
-
-4. Correlation Coefficient
+# 3. Standard Deviation
 
 
-5. How to access to sourcecode
+
+# 4. Correlation Coefficient
+
+
+# 5. How to access to sourcecode
 
 ```
 import inspect
 print(inspect.getsource(function_name))
 ```
 
-
+---
 What is LOG?
 
 We have 5000 dollars, and we know this one strategy's annual return is 10%
