Update 5.27 Correlation .md

--- a/Today I learned/5.27 Correlation .md
+++ b/Today I learned/5.27 Correlation .md
@@ -1,7 +1,13 @@
 5.27 Today I learned...
 
-# 1
 
+# Correlation
+
+# numpy
+
+
+
+---
 Correlation
 -
 
@@ -40,4 +46,55 @@ def correlated(x,y):
 
 print(correlated(x,y))        #0.5398442342154088
 ```
+---
+# numpy
+numpy = numerical python
+we can use numpy by 
+```
+import numpy as np 
+```
 
+To create a Numpy array of numerical values,
+in fact, it doens't have to be numbers, each element can be strings, or other arrays
+
+- Numpy array is a powerful data structure
+```
+variable_test1 = np.array([92,92,88,99,84])
+variable_test2 = np.array(["AAPL","NFLX","MSFT","GOOG","FB"])
+print(variable_test1)           #[92 92 88 99 84]
+print(variable_test2)           #['AAPL' 'NFLX' 'MSFT' 'GOOG' 'FB']
+```
+
+To import arrays from csv,
+
+```
+variable_test3 = np.genfromtxt("SPY.csv",delimiter = ',')
+print(variable_test3)
+```
+
+Operations with numpy array
+-
+if we want to add 3 in each element in an array
+```
+
+arr = [92,92,88,99,84]
+arr3 = []
+for a in range(len(arr)):
+    arr3.append(arr[a] + 3)
+
+print(arr3)
+
+```
+
+But with numpy array we can write simply like this
+```
+arr3_easy = np.array(arr) + 3
+print(arr3_easy)
+```
+we can also find squares, or squareroot using this
+```
+arr_sqr = np.array(arr) ** 2
+print(arr_sqr)             #[8464 8464 7744 9801 7056]
+arr_sqrt = np.sqrt(np.array(arr)) 
+print(arr_sqrt)            #[9.59166305 9.59166305 9.38083152 9.94987437 9.16515139]
+```
