Update 5.27 Correlation .md

--- a/Today I learned/5.27 Correlation .md
+++ b/Today I learned/5.27 Correlation .md
@@ -98,3 +98,15 @@ print(arr_sqr)             #[8464 8464 7744 9801 7056]
 arr_sqrt = np.sqrt(np.array(arr)) 
 print(arr_sqrt)            #[9.59166305 9.59166305 9.38083152 9.94987437 9.16515139]
 ```
+
+We can also add numpy arrays to each other
+```
+example1 = np.array([1,2,3,4,5])
+example2 = np.array([5,10,15,20,25])
+example3 = np.array([3,6,9,12,15])
+
+sum_examples = example1 + example2 + example3
+average_examples = sum_examples/3
+print(sum_examples)             #[ 9 18 27 36 45]
+print(average_examples)         #[ 3.  6.  9. 12. 15.]
+```
