Update and rename Dictionaries.md to 5.28 Dictionaries.md

--- a/Today I learned/5.28 Dictionaries.md
+++ b/Today I learned/5.28 Dictionaries.md
@@ -2,7 +2,7 @@
 
 1.
 
-Accessing values in dictionaries
+# Accessing values in dictionaries
 
 We have dictionaries.
 ```
@@ -13,7 +13,9 @@ favourite_languages = {
     "jules":"ruby"
     } 
 ```
-If we want to print out each values in this dictionary
+
+# If we want to print out each values in this dictionary
+
 ```
 for key in favourite_languages:
     print(favourite_languages[key])
