--- a/Today I learned/5.28 Dictionaries.md
+++ b/Today I learned/5.28 Dictionaries.md
@@ -25,3 +25,33 @@ or
 for key,value in favourite_languages.items():
     print(value)
 ```
+
+# Create a dictionary by extracting the keys from another dictionary
+There is a sample dictionary here.
+```
+sample_dict = {
+    "name": "Kelly",
+    "age": 29,
+    "salary": 80000,
+    "city": "New york"}
+```
+```
+keys = ["name", "salary"]
+```
+if we want to get ```{'name': 'Kelly', 'salary': 8000}```
+
+We can use for loop, and update()
+```
+new = {}
+
+#looping through keys
+for i in keys:
+    new.update({i:sample_dict[i]})
+print(new)
+```
+
+or we can use dictionary comprehension
+```
+new1 = {i: sample_dict[i] for i in keys}
+print(new1)
+```
