--- a/Today I learned/5.28 Dictionaries.md
+++ b/Today I learned/5.28 Dictionaries.md
@@ -55,3 +55,27 @@ or we can use dictionary comprehension
 new1 = {i: sample_dict[i] for i in keys}
 print(new1)
 ```
+
+
+# To check if the key called 'name' is in the dictionary
+
+```
+"name" in sameple_dict
+```
+
+# To delete the key:value in the dictionary
+
+```
+sample_dict = {
+    "name": "Kelly",
+    "age": 29,
+    "salary": 80000,
+    "city": "New york"}
+
+del sample_dict["salary"]
+print(sameple_dict)
+```
+We get the result
+```
+{'name': 'Kelly', 'age': 29, 'city': 'New york'}
+```
