Update and rename 5.12 List & List functions & Methods, Slicing.py to 5.12 List & List functions & Methods, Slicing.md

--- a/Today I learned/5.12 List & List functions & Methods, Slicing.md
+++ b/Today I learned/5.12 List & List functions & Methods, Slicing.md
@@ -1,35 +1,44 @@
-5/12 Today I learned..
+# 5/12 Today I learned..
 
-1. usages of these functions
+Usages of these functions
+-
 
-.append
-.remove
-.insert
-.pop
-range()
-.count()
-.sort()
-sorted()
+```.append``` ```.remove```
+```.insert```
+```.pop```
+```range()```
+```.count()```
+```.sort()```
+```sorted()```
 
 2.
-# difference between .append and .insert
+
+#difference between .append and .insert
 #.append is only for adding an element at the end of a list
 #.insert is for adding an element at a specific index in a list
 
 3. Change variable type
 
----examples of .append, .insert, .remove, .pop, range(), .count(), .sort(), sorted()
+
+examples of .append, .insert, .remove, .pop, range(), .count(), .sort(), sorted()
+
+```
 #.append is used to add an element
-grade = [100,80,60,40]
+grade = [100, 80, 60, 40]
 grade.append(50)
 print(grade)                                      #[100, 80, 60, 40, 50]
+```
 
 #.append can also be used to 2Dlist
+```
 stocks = [["Apple",130],["KO",55],["KORU",50]]
 stocks.append(["NFLX",350])
 print(stocks)                                      #[['Apple', 130], ['KO', 55], ['KORU', 50], ['NFLX', 350]]
+```
+
 
 #.append is used to add an element
+
 stocks = [["Apple",130],["KO",55],["KORU",50],["NFLX",350]]
 
 #I want to add ["GPRO",80] after ["KO",55]
