Update 5.12 List & List functions & Methods, Slicing.md

--- a/Today I learned/5.12 List & List functions & Methods, Slicing.md
+++ b/Today I learned/5.12 List & List functions & Methods, Slicing.md
@@ -11,13 +11,13 @@ Usages of these functions
 ```.sort()```
 ```sorted()```
 
-2.
 
-#difference between .append and .insert
-#.append is only for adding an element at the end of a list
-#.insert is for adding an element at a specific index in a list
 
-3. Change variable type
+# difference between .append and .insert
+.append is only for adding an element at the end of a list
+.insert is for adding an element at a specific index in a list
+
+# Change variable type
 
 
 examples of .append, .insert, .remove, .pop, range(), .count(), .sort(), sorted()
