Update 5.12 List & List functions & Methods, Slicing.md

--- a/Today I learned/5.12 List & List functions & Methods, Slicing.md
+++ b/Today I learned/5.12 List & List functions & Methods, Slicing.md
@@ -3,7 +3,8 @@
 Usages of these functions
 -
 
-```.append``` ```.remove```
+```.append``` 
+```.remove```
 ```.insert```
 ```.pop```
 ```range()```
@@ -37,56 +38,96 @@ print(stocks)                                      #[['Apple', 130], ['KO', 55],
 ```
 
 
-#.append is used to add an element
+# .append is used to add an element
 
+```
 stocks = [["Apple",130],["KO",55],["KORU",50],["NFLX",350]]
+```
 
-#I want to add ["GPRO",80] after ["KO",55]
+I want to add ```["GPRO",80]``` after ```["KO",55]```
+
+```
 stocks[2].append(["GPRO",80])
+```
 
-#BUT! this adds ["GPRO",80] inside of ["KO",55]
+#BUT! this adds ```["GPRO",80]``` inside of ```["KO",55]```
+
+```
 print(stocks)                                     #[['Apple', 130], ['KO', 55, ['GPRO', 80]], ['KORU', 50], ['NFLX', 350]]
+```
 
-#reset the original list
+
+# reset the original list
+
+```
 stocks = [["Apple",130],["KO",55],["KORU",50],["NFLX",350]]
+```
 
-#if we want to add another list use .insert
+if we want to add another list use .insert
+
+```
 stocks.insert(2, ["GPRO",80])               
 print(stocks)                                   #[['Apple', 130], ['KO', 55], ['GPRO', 80], ['KORU', 50], ['NFLX', 350]]
+```
 
+# reset the original list
 
-#reset the original list
+```
 stocks = [["Apple",130],["KO",55],["KORU",50],["NFLX",350]]
-#usage of .remove
-#We want to remove ["KORU",50] from the list
+```
+
+Usage of ```.remove()```
+We want to remove ```["KORU",50]``` from the list
+
+```
 stocks.remove(["KORU",50])
 print(stocks)   
+```
 
-#if we want to remove 55 in ["KO",55]
+if we want to remove ```55``` in ```["KO",55]```
+
+```
 stocks = [["Apple",130],["KO",55],["KORU",50],["NFLX",350]]
 stocks[1].remove(55)
 print(stocks)               #[['Apple', 130], ['KO'], ['KORU', 50], ['NFLX', 350]]
+```
 
-#usage of .pop
-#.pop doesn't require any argument in parenthesis
+# usage of .pop
+
+.pop doesn't require any argument in parenthesis
+-
+
+```
 stocks = [["Apple",130],["KO",55],["KORU",50],["NFLX",350]]
 stocks.pop()
 print(stocks)         #[['Apple', 130], ['KO', 55], ['KORU', 50]]
+```
 
-#.pop can be used like this
+# .pop can be used like this
+
+```
 stocks = [["Apple",130],["KO",55],["KORU",50],["NFLX",350]]
 stocks.pop(-2)
 print(stocks)         #[['Apple', 130], ['KO', 55], ['NFLX', 350]]
+```
 
-#we can also track what was removed from using .pop
+
+# we can also track what was removed from using .pop
+
+```
 stocks = [["Apple",130],["KO",55],["KORU",50],["NFLX",350]]
 removed = stocks.pop(0)
 print(stocks)               #[['KO', 55], ['KORU', 50], ['NFLX', 350]]
 print(removed)            #['Apple', 130]
+```
 
-#range
+# range
+
+```
 list1 = range(5)   
 print(list(list1))        #[0,1,2,3,4]
+```
+
 
 #if we want to create a list that goes from 5 ~ 10
 list2 = range(5,11)     #5 is included, 11 is excluded
