Update 5.12 List & List functions & Methods, Slicing.md

--- a/Today I learned/5.12 List & List functions & Methods, Slicing.md
+++ b/Today I learned/5.12 List & List functions & Methods, Slicing.md
@@ -129,74 +129,113 @@ print(list(list1))        #[0,1,2,3,4]
 ```
 
 
-#if we want to create a list that goes from 5 ~ 10
+# if we want to create a list that goes from 5 ~ 10
+
+```
 list2 = range(5,11)     #5 is included, 11 is excluded
 print(list(list2))
+```
 
-#if we want to create a list that goes from 5, 9, 13, 17, 21
+# if we want to create a list that goes from 5, 9, 13, 17, 21
+
+```
 list3 = range(5,22,4)   #5 is included, 22 is excluded, 4 is interval
 print(list(list3))
+```
 
-#to create a list [10,20,30,40 . . .100]
+# to create a list 
+```[10,20,30,40 . . .100]```
+
+```
 list4 = range(10,101,10)
 print(list(list4))
+```
 
-#slicing
-#sometimes we wanna cut the list in however we want
+
+# slicing
+
+sometimes we wanna cut the list in however we want
+
+```
 list5 = ["eat","code","sleep","play","code","eat"]
-#if I want to have only ["eat","code","sleep"]
+```
+if I want to have only ```["eat","code","sleep"]```
+
+```
 print(list5[0:3])         #['eat', 'code', 'sleep']
+```
 
-#we can also use slicing like this
-#if I want to slice list5 like ["play","code","eat"]
+we can also use slicing like this
+if I want to slice ```list5``` like ```["play","code","eat"]```
+```
 print(list5[3:])                          #['play', 'code', 'eat']
-#or
+```
+or
+```
 print(list5[-3:])                           #['play', 'code', 'eat']
+```
 
+# usage of .count
 
-#usage of .count
+```
 signal = ["yes","no","yes","yes","no","yes","yes","no","yes","yes","no","yes","yes","no","yes","yes","no","yes","yes","no","yes","yes","no","yes","yes","no","yes","yes","no","yes","yes","no","yes","yes"]
-#if we want to count how many times we have "yes"
-yes_signal = signal.count("yes")
-#if we want to count how many times we have "no"
-no_signal = signal.count("no")
+```
 
+if we want to count how many times we have "yes"
+```yes_signal = signal.count("yes")```
+if we want to count how many times we have "no"
+```no_signal = signal.count("no")```
+
+```
 print(yes_signal,no_signal,len(signal))                 #23 11 34
+```
 
+sometimes we want to sort list by alphabetical order
 
-#sometimes we want to sort list by alphabetical order
+```
 randomstocks = ["AAPL","KO","COST","AMZN","NFLX","Z"]
-
-#if we want to sort this list in an alphabetical order
+```
+if we want to sort this list in an alphabetical order
+```
 randomstocks.sort()
 print(randomstocks)               #['AAPL', 'AMZN', 'COST', 'KO', 'NFLX', 'Z']
+```
 
-#but if we try to assign this to a variable, we get 'None', it's because .sort() does not return any value
+but if we try to assign this to a variable, we get 'None', it's because .sort() does not return any value
+```
 randomstocks_sorted = randomstocks.sort()
 print(randomstocks_sorted)                #None
+```
 
-#if we want to sort the list in descending order
+if we want to sort the list in descending order
+
+```
 randomstocks.sort(reverse = True)
 print(randomstocks)
-
+```
 
 #sorted()
 #we can use sorted function
+```
 randomstocks = ["AAPL","KO","COST","AMZN","NFLX","Z"]
 sortedstocks = sorted(randomstocks)
 print(sortedstocks)                 #['AAPL', 'AMZN', 'COST', 'KO', 'NFLX', 'Z']
 print(randomstocks)                 #['AAPL', 'KO', 'COST', 'AMZN', 'NFLX', 'Z'] sorted() function doesn't change the original list
+```
 
-#if we want to permanently change the list in an alphabetical order
+
+if we want to permanently change the list in an alphabetical order
+```
 randomstocks = ["AAPL","KO","COST","AMZN","NFLX","Z"]
 randomstocks = sorted(randomstocks)     #we can assign this again back to the original list
 print(randomstocks)
+```
 
-
----example of change of variable
+Example of change of variable
+```
 assets = ["stocks","bonds","real estate","crypto"]
 num_assets = len(assets)
 print(num_assets)
 print("There are " + str(num_assets) + " number of assets")         #There are 4 number of assets
 print("There are " + num_assets + " number of assets")              #TypeError: can only concatenate str (not "int") to str
-
+```
