Update and rename 5.28 Dictionaries.md to 5.28 Different ways to access values in a dictionary, update() .md

--- a/Today I learned/5.28 Different ways to access values in a dictionary, update() .md
+++ b/Today I learned/5.28 Different ways to access values in a dictionary, update() .md
@@ -1,6 +1,5 @@
-5/28 Today I learned...
+# 5/28 Today I learned...
 
-1.
 
 # Accessing values in dictionaries
 
@@ -16,11 +15,17 @@ favourite_languages = {
 
 # If we want to print out each values in this dictionary
 
+Using key
 ```
-for key in favourite_languages:
+for key in favourite_languages:     #same as ====> for key in favourite_languages.keys(): 
     print(favourite_languages[key])
 ```
-or
+Using value
+```
+for value in favourite_languages.values():
+    print(value)
+```
+Using items() ===> this is used when we need to access both keys and values
 ```
 for key,value in favourite_languages.items():
     print(value)
