Update 5.29 More on .update().md

--- a/Today I learned/5.29 More on .update().md
+++ b/Today I learned/5.29 More on .update().md
@@ -65,7 +65,7 @@ we can use ```.update()```
 #set a new empty dictionary
 dic4 = {}
 
-for each in [dic1,dic2,dic3]:
+for each in [dic1,dic2,dic3]:       #warning : there is only 'each' instead of key,value/ because we care looping through list now
     dic4.update(each)
 print(dic4)
 
