Update 5.29 More on .update().md

--- a/Today I learned/5.29 More on .update().md
+++ b/Today I learned/5.29 More on .update().md
@@ -1,4 +1,6 @@
 # 5/29 Today I learend...
+---
+update() , enumerate()
 
 # More on .update()
 
@@ -80,4 +82,20 @@ print(dic4)
 
 ```
 
-# Generating dictionaries using dictionary comprehension
+# .enumerate()
+enumerate is used to get the index of the items
+
+There is another way to achieve this, typically we would use
+
+```
+stocks =["NFLX","AAPL","T","BRK.B"] 
+for a in range(len(stocks)):
+    print(a, stocks[a])
+```
+
+But with .enumerate() function we can write like this
+```
+stocks =["NFLX","AAPL","T","BRK.B"] 
+for index, item in enumerate(stocks):
+    print(index, item)
+```
