Update and rename 5.29 More on .update().md to 5.29 More on .update(), Immutable & mutable(id()).md

--- a/Today I learned/5.29 More on .update(), Immutable & mutable(id()).md
+++ b/Today I learned/5.29 More on .update(), Immutable & mutable(id()).md
@@ -99,3 +99,25 @@ stocks =["NFLX","AAPL","T","BRK.B"]
 for index, item in enumerate(stocks):
     print(index, item)
 ```
+
+
+# Immutable & Mutable
+
+Strings are immutable
+Integers are immutable
+Lists are mutable
+```.append()``` doesn't create a new list.
+Like any other list methods also don't create a new list.
+We call this behavior ```Modifying the object in place```
+
+we can check any object's memory address by using ```id()```
+
+```
+hello = "heh"
+print(id(hello))    #2375929239536
+hello += "aa"
+print(id(hello))    #2375930653232
+```
+Notice that two addresses are different, it is because strings are immutable,
+and they created a new string variable when ```"aa"``` was added to ```hello``` variable.
+
