Update 5.31 input(), print.md

--- a/Today I learned/5.31 input(), print.md
+++ b/Today I learned/5.31 input(), print.md
@@ -99,3 +99,28 @@ print(e)
 Say anything, and any word will be elements in a list (separated by space) : Do Re Mi
 ['Do', 'Re', 'Mi']
 ```
+
+# if I want to take multiple integers at once
+There are two ways to do this.
+
+
+1. Using List comprehension
+```
+f = [int(x) for x in input("Enter multiple values : ").split()]
+print(f)
+```
+This will result in
+```
+Enter multiple values : 55 22 33 44 111
+[55, 22, 33, 44, 111]
+```
+2. Using map function
+```
+a,b,c = list(map(int, input("hello, enter multiple values : ").split()))
+print(a,b,c)
+```
+This will result in 
+```
+hello, enter multiple values : 1 15 23
+1 15 23
+```
