Update 5.31 input(), print.md

--- a/Today I learned/5.31 input(), print.md
+++ b/Today I learned/5.31 input(), print.md
@@ -105,15 +105,21 @@ There are two ways to do this.
 
 
 1. Using List comprehension
+
 ```
 f = [int(x) for x in input("Enter multiple values : ").split()]
 print(f)
 ```
+
 This will result in
+
 ```
 Enter multiple values : 55 22 33 44 111
 [55, 22, 33, 44, 111]
 ```
+
+Notice that I had only one variable here, so ```f``` is ```[55, 22, 33, 44, 111]```
+
 2. Using map function
 ```
 a,b,c = list(map(int, input("hello, enter multiple values : ").split()))
@@ -124,3 +130,10 @@ This will result in
 hello, enter multiple values : 1 15 23
 1 15 23
 ```
+
+Notice that I had 3 different variables, so 
+```a``` is ```1```
+
+```b``` is ```15```
+
+```c``` is ```23```
