Update 5.31 input(), print.md

--- a/Today I learned/5.31 input(), print.md
+++ b/Today I learned/5.31 input(), print.md
@@ -120,6 +120,20 @@ Enter multiple values : 55 22 33 44 111
 
 Notice that I had only one variable here, so ```f``` is ```[55, 22, 33, 44, 111]```
 
+I can also write like
+
+```
+f,g,h,i,j = [int(x) for x in input("Enter multiple values : ").split()]
+print(f,g,h,i,j)
+```
+
+And this will result in
+
+```
+Enter multiple values : 1 2 3 4 5
+1 2 3 4 5
+```
+
 2. Using map function
 ```
 a,b,c = list(map(int, input("hello, enter multiple values : ").split()))
