Update 5.31 input(), print.md

--- a/Today I learned/5.31 input(), print.md
+++ b/Today I learned/5.31 input(), print.md
@@ -70,6 +70,10 @@ d = int(input("Enter any number : "))
 ```
 
 # If we want to take multiple inputs in one line
+
+There are two ways to achieve this.
+
+**regular way**
 ```
 name, age, dream = input("Enter your name, age, and money (separated by space) : ").split()
 
@@ -89,12 +93,29 @@ money = 0
 
 ```
 
+**using list comprehension**
+
+```
+name, age, dream = [x for x in input("Enter your name, age, dream(separated by space) : ").split()]
+print(name, age, dream)
+```
+
+This will result in 
+
+```
+Enter your name, age, dream(separated by space) : Jin 29 Architect
+Jin 29 Architect
+```
+
 # if we want to take user input as items in a list
+
 ```
 e = input("Say anything, and any word will be elements in a list (separated by space) : ").split()
 
 print(e)
 ```
+
+
 ```
 Say anything, and any word will be elements in a list (separated by space) : Do Re Mi
 ['Do', 'Re', 'Mi']
@@ -104,7 +125,7 @@ Say anything, and any word will be elements in a list (separated by space) : Do 
 There are two ways to do this.
 
 
-1. Using List comprehension
+**1. Using List comprehension**
 
 ```
 f = [int(x) for x in input("Enter multiple values : ").split()]
@@ -134,7 +155,7 @@ Enter multiple values : 1 2 3 4 5
 1 2 3 4 5
 ```
 
-2. Using map function
+**2. Using map function**
 ```
 a,b,c = list(map(int, input("hello, enter multiple values : ").split()))
 print(a,b,c)
