Update 6.1 How to run python file in Command Prompt.md

--- a/Today I learned/6.1 How to run python file in Command Prompt.md
+++ b/Today I learned/6.1 How to run python file in Command Prompt.md
@@ -8,3 +8,34 @@
 4. Type directory where current file is, which is `cd Desktop\Coding\Python'
 5. When you are in the folder where the file you want to run is, then type 'python "array.py"
 6. Done!
+
+# Try / Except
+If we have some dangerous code (preferably one line) that is likely to cause some error,
+
+We can use try/except to avoid having an error
+
+Basically it is like, try this(try) or try that (except)
+```
+try:
+    print(var1)
+except:
+    print("var1 was not defined.")
+
+```
+
+# 'is'
+
+We can use ```is``` as strong ```==```
+
+The difference between ```is``` and ```==``` is,
+
+```is``` checks if two variables are the same value and type
+
+but ```==``` checks if two variables are the same value
+
+For example,
+```
+print(0 is 0.0)
+```
+will lead to 
+```False```
