Update 6.3 Passing arbitrary Number of Arguments.md

--- a/Today I learned/6.3 Passing arbitrary Number of Arguments.md
+++ b/Today I learned/6.3 Passing arbitrary Number of Arguments.md
@@ -45,4 +45,6 @@ This will result
 ('One book',)
 ```
 
-# Mixing 
+# Mixing positional arguments and arbitrary arguments
+
+# Arbitrary keyword arguments
