Update 5.22 Types,Class,ClassVariables,Methods, Constructors.md

--- a/Today I learned/5.22 Types,Class,ClassVariables,Methods, Constructors.md
+++ b/Today I learned/5.22 Types,Class,ClassVariables,Methods, Constructors.md
@@ -23,16 +23,20 @@ class Cool_people:
   pass                  #to avoid indent problem, we just wrote pass
 ```
 
-# instantiation, it's like calling function
-`cool_people_object = Cool_people()`
+# Instantiation, it's like calling function, but it calls class
+We need `object`, which is like variable.
 
+
+```
+cool_people_object = Cool_people()
+```
 # Class Variables
 
 ```
 class Class_name:
   
   #here goes class_variable_name and a data type
-  class_variable_name: anydata
+  class_variable_name = anydata
 
 object_name = Class_name()
 ```
@@ -51,10 +55,10 @@ class Stocks:
   
   #hello() is a method
   def hello(self):                        #notice that there is a 'self' as an argument
-    print "hello this stock's ticker is {}.".format(self.stockname))
+    print("hello this stock's ticker is {}.".format(self.stockname))
 ```
 
-# instantiation
+# Instantiation
 ```
 class Stocks:
   stockname = "AAPL"
@@ -62,13 +66,14 @@ class Stocks:
   #hello() is a method
   def hello(self):                        #notice that there is a 'self' as an argument
     print("hello this stock's ticker is {}.".format(self.stockname))
-    
+
+#Instantiation
 first_stock = Stocks()
 
 first_stock.hello()                       #hello this stock's ticker is AAPL.
 ```
 
-# Creating methods that have multi aruments in some class
+# Creating methods that have multi arguments in some class
 
 ```
 class Circle:
