--- a/Today I learned/5.24 Class.md
+++ b/Today I learned/5.24 Class.md
@@ -1,5 +1,5 @@
 # 5/24 Today I learned...
-# 1.Class
+# Class
 
 # Instance
 
@@ -72,17 +72,17 @@ print(cal2.add(6))                    #11
 # Things to keep in mind
 
 ## 1.
-Now we call cal1 an OBJECT
-Also cal2 is an OBJECT
+Now we call `cal1` an OBJECT
+Also `cal2` is an OBJECT
 
-The result of cal1, and cal2 are independent of each other
-I can change cal1's value which has no impact on cal2's value
+The result of `cal1`, and `cal2` are independent of each other
+I can change `cal1`'s value which has no impact on `cal2`'s value
 
 
 ## 2.
-cal1, cal2 are the products of class Calculator()
+`cal1`, `cal2` are the products of class Calculator()
 so we also say
-cal1, cal2 are the INSTANCES of class Calculator()
+`cal1`, `cal2` are the INSTANCES of class Calculator()
 
 ## 3.
 We call functions inside class METHODS
