Update and rename 6.6 dir(), hasattr().md to 6.6 dir(), hasattr(), more on Class(Class variable & Instance variable).md

--- a/Today I learned/6.6 dir(), hasattr(), more on Class(Class variable & Instance variable).md
+++ b/Today I learned/6.6 dir(), hasattr(), more on Class(Class variable & Instance variable).md
@@ -75,3 +75,46 @@ a = {"age": 29, "name" : "Girin"}
 
 hasattr(c, "items")                       #True
 ```
+
+## Class
+When we create a class called `Circle`
+```
+class Circle:
+    
+    #define class variable 'pi'
+    pi = 3.14
+    
+    def __init__(self, diameter):
+        
+        #since most real problems are measured in diameters, we will define what self.radius is in a constructor.
+        self.radius = diameter / 2
+    
+    #get circumference
+    def get_circumference(self):
+        circumference = 2 * self.pi * self.radius
+        return circumference
+   
+    #get area
+    def get_area(self):
+        area = self.pi * self.radius ** 2
+        return area
+```
+Now let's make an object
+```
+circle1 = Circle(300)
+circle2 = Circle(25)
+```
+
+What I want to note is,
+
+when I made method for getting circumference of a circle,
+
+I wrote `self` in front of `pi` in 
+
+```
+circumference = 2 * self.pi * self.radius
+```
+
+Because `pi` was made as a class variable but still it needs `self` in front of it to be used.
+
+and also `print(circle1.radius)` is possible, even though I didn't pass `radius` as argument and I just created it in a constructor as an `instance variable`
