Update 6.8 Artificial Intelligence (How computers learn).md

--- a/Today I learned/6.8 Artificial Intelligence (How computers learn).md
+++ b/Today I learned/6.8 Artificial Intelligence (How computers learn).md
@@ -35,40 +35,26 @@ They need quality data, and an appropriate model.
 
 # What should I learn?
 
-- supervised learning 
+1. supervised learning 
   - classification
-  
     - kNN
-
-
     - Naive Bayes
-
-
     - Support Vector
-
-
     - Machine Decision
-    
   - regression
     - Linear Regression
     - Locally Weighted Linear
     - Ridge
     - Lasso
     
-- unsupervised learning
-
-    -  Clustering
-    
+2. unsupervised learning
+    - Clustering
     - K Means
-    
     - Density Estimation
-    
     - Exception Maximization
-    
     - Pazen Window
-    
     - DBSCAN
 
-- reinforcement learning
-  - DQN
-  - A3Q
+3. reinforcement learning
+    - DQN
+    - A3Q
