Update 6.15 Error Handling.md

--- a/Today I learned/6.15 Error Handling.md
+++ b/Today I learned/6.15 Error Handling.md
@@ -1,7 +1,7 @@
 ### 6/15 Today I learned...
 
 #### Error Handling
-
+##### Error Handling features give programmers how much information we wanna share with users when things go wrong.
 1. Example.
 ```py
 a = input("Enter your number: ")
