--- a/Today I learned/6.15 Error Handling.md
+++ b/Today I learned/6.15 Error Handling.md
@@ -2,7 +2,7 @@
 
 #### Error Handling
 ##### Error Handling features give programmers how much information we wanna share with users when things go wrong.
-1. Example.
+An example.
 ```py
 a = input("Enter your number: ")
 b = input("Enter your second number: ")
