Update and rename 6.16 count(), read(), readlines(), split(), strip() .md to 6.16 count(), read(), readlines(), split(), strip(), json.dump(), json.load() .md

--- a/Today I learned/6.16 count(), read(), readlines(), split(), strip(), json.dump(), json.load() .md
+++ b/Today I learned/6.16 count(), read(), readlines(), split(), strip(), json.dump(), json.load() .md
@@ -96,3 +96,23 @@ else:
 
     print(a - b - c)
 ```
+---
+# json.dump()
+
+# if we wanna store data in json file, we can write like this
+
+### json stands for Javascript Object Notation. It was developed to store data for Javascript. But it is used by other programming languages.
+```py
+import json
+
+data_to_store = {"NFLX":True, "APPL":True, "GPRO":True, "T":False}
+filename = "stocks_to_buy.json"
+
+with open(filename, "w") as f:
+    json.dump(data_to_store, f)
+```
+Now inside <em>stocks_to_buy.json</em> file,
+```json
+{"NFLX":True, "APPL":True, "GPRO":True, "T":False}
+```
+First we have to import `json` module, json() takes two arguments, the first one is the data to store, and the second one is file object.
