Update 6.16 count(), read(), readlines(), split(), strip(), json.dump(), json.load() .md

--- a/Today I learned/6.16 count(), read(), readlines(), split(), strip(), json.dump(), json.load() .md
+++ b/Today I learned/6.16 count(), read(), readlines(), split(), strip(), json.dump(), json.load() .md
@@ -116,3 +116,17 @@ Now inside <em>stocks_to_buy.json</em> file,
 {"NFLX":True, "APPL":True, "GPRO":True, "T":False}
 ```
 First we have to import `json` module, json() takes two arguments, the first one is the data to store, and the second one is file object.
+
+---
+# if we wanna read the json file
+
+## json.load()
+```py
+import json
+
+filename = "stocks_to_buy.json"
+with open(filename,"r") as f:
+    file = json.load(f)                         # we need to assign this to a variable
+print(file)
+```
+`json.load()` takes one argument which is file object.
