Update 6.17 *args, **kwargs, unpacking.md

--- a/Today I learned/6.17 *args, **kwargs, unpacking.md
+++ b/Today I learned/6.17 *args, **kwargs, unpacking.md
@@ -95,8 +95,9 @@ we can see that **kwargs are stored in a dictionary
 
 ---
 
-# other ways to use *
+# Other ways to use *
 ## unpacking
+### <em>Example 1</em>
 ```py
 lst1 = [1,2,3]
 def addition(a,b,c):
@@ -108,4 +109,32 @@ addition(*lst1)
 <em>We get the result...</em>
 ```py
 6
+```
+### <em>Example 2</em>
+```py
+a, *b, c = [1,2,3,4,5,6,7]
+print(a)
+print(b)
+print(c)
+```
+And we get
+```py
+1
+[2, 3, 4, 5, 6]
+7
+```
+# Other ways to use **
+## unpacking
+### <em>Example</em>
+
+```py
+def addition(a,b,c):
+    return a+b+c
+
+random_dic = {"a":5,"b":15,"c":5}
+addition(**random_dic)
+```
+<em>And we get...</em>
+```py
+25
 ```
